examples/invalid/18_existential_hidden_type_escape.lane
// invalid: values whose type contains an opened hidden type cannot escape
enum Packed {
  hide[T](T)
}

fn bad(p : Packed) -> Int {
  match p {
    Packed::hide[T](value) => value
  }
}
